package exp9;
//@Author：ranxing
//@Time：2022/10/31   17:21
//@File：Vip.java

abstract public class Vip {
    public abstract void update(Subject subject,String name,int price);
}
